--- a/css/main.css
+++ b/css/main.css
@@ -97,37 +97,79 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-body{
+#home{
   background: url('../img/grid.jpg') no-repeat center center fixed;
   background-size: cover;
+  overflow-y:hidden;
 }
 
-h1{
-  font-family: 'Yeseva One', cursive;
+#about{
+  background: url('../img/grid.jpg') no-repeat center center fixed;
+  background-size: cover;
+  overflow-y:hidden;
+}
+
+#work{
+  background-color: #FFF;
+}
+
+.overlay { 
+   position: fixed;
+   top: 0; right: 0; bottom: 0; left: 0; }
+
+.photo {
+  width: 400px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: left;
+  width: 100%;
+  padding: 3px;
+}   
+
+#homelink{
+  color: #FFF; 
+  font-family: 'Righteous', cursive;
   font-size: 45px; 
-  color: #f8efe8; 
   margin: 28px 0 0 0;
+  list-style-type: none;
+  text-decoration: none;
 }
 
 #header, #footer{
-  background-color: #950A13;
+  background-color: #FF6301;
   height: 120px;
 }
 
 #content{
-  background-color: rgba(168,71,25,0.3);
+
+  height: 710px;
+}
+
+#workcontent{
+
+  height: 710px;
+}
+
+#aboutcontent{
+
   height: 710px;
 }
 
 #navigation{
-  color:  #f8efe8;
+  color:  #FFF;
   list-style-type: none;
 }
 
 #navigation li{
   display: inline-block;
-  margin: 36px 24px 0 0;
+  color: #FFF;
+  margin: 40px 24px 0 0;
   font-size: 24px;
+}
+
+#navigation a{
+  color:#FFF;
+
 }
 
 .copy-font{
@@ -135,15 +177,35 @@ h1{
 }
 
 #desc{
-  text-align: center;
+  text-align: left;
   font-size: 30px;
-  color: #f8efe8;
-  background-color: rgba(178, 71, 25, 0.5);
-  margin: 30% 0 0 0;
+  color: #FFF;
+  background-color: rgba(255, 99, 1, 0.5);
+  height: 100%;
+  margin: 0 0 0 0;
+  padding: 45% 20% 0 10%;
+}
+
+#aboutdesc{
+  text-align: left;
+  font-size: 30px;
+  color: #FFF;
+  background-color: rgba(255, 99, 1, 0.5);
+  height: 100%;
+  padding: 20% 20% 0 10% ;
+  margin: 0 0 0 0;
 }
 
 #footer{
   height: 90px;
+  width: 100%;
+}
+
+#copyright{
+    font-size: 15px ;
+    color: #FFF;
+    margin: 30px 0px 0px 0px;
+
 }
 
 #featured{
