--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,7 @@ textarea {
 #header{
   background-color: #FF6301;
   height: 120px;
+  width: 1920px;
 }
 
 #content{
@@ -241,11 +242,153 @@ textarea {
   width: 300px;
 }
 
-@media (max-width: 700px) {
 
+@media (max-width: 1024px) {
 
-  body{
-    background: url('') no-repeat center center fixed;
+#home{
+  background: #fff;
+  background-size: cover;
+  overflow-y:hidden;
+}
+
+#about{
+  background:#fff;
+  background-size: cover;
+  overflow-y:hidden;
+}
+
+#contact{
+  background:#fff;
+  background-size: cover;
+  overflow-y:hidden;
+}
+
+#work{
+  background-color: #FFF;
+}
+
+.overlay { 
+   position: fixed;
+   top: 0; right: 0; bottom: 0; left: 0; }
+
+.photo {
+  width: 400px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: left;
+  width: 100%;
+  padding: 3px;
+}   
+
+#homelink{
+  color: #FFF; 
+  font-family: 'Righteous', cursive;
+  font-size: 30px; 
+  margin: 15px 0 0 150px;
+  list-style-type: none;
+  text-decoration: none;
+}
+
+#header{
+  background-color: #FF6301;
+  height: 120px;
+  width: 510px;
+}
+
+#content{
+
+  height: 710px;
+}
+
+#workcontent{
+
+  height: 710px;
+}
+
+#aboutcontent{
+
+  height: 710px;
+}
+
+#navigation{
+  color:  #FFF;
+  list-style-type: none;
+}
+
+#navigation li{
+  display: inline-block;
+  color: #FFF;
+  margin: 0px 30px 0 40px;
+  font-size: 21px;
+}
+
+#navigation a{
+  color:#FFF;
+
+}
+
+#conlinks{
+  text-align: left;
+  color: #FFF;
+  background-color: rgba(255, 99, 1, 0.5);
+  height: 100%;
+  margin: 0 0 0 0;
+  padding: 7% 20% 0 5%;
+  list-style-type: none;
+}
+
+#conlinks li{
+  display: block;
+  color: #FFF;
+  margin: 30px 24px 0 0;
+  font-size: 90px;
+}
+
+#conlinks a{
+  color:#FFF;
+
+}
+
+.copy-font{
+  font-family: 'DM Sans';
+}
+
+#desc{
+  text-align: left;
+  font-size: 30px;
+  color: #FFF;
+  background-color: rgba(255, 99, 1, 0.5);
+  height: 100%;
+  margin: 0 0 0 0;
+  padding: 20% 20% 0 20%;
+}
+
+#aboutdesc{
+  text-align: left;
+  font-size: 30px;
+  color: #FFF;
+  background-color: rgba(255, 99, 1, 0.5);
+  height: 100%;
+  padding: 7% 20% 0 10% ;
+  margin: 0 0 0 0;
+}
+
+#footer{
+  background-color: #FF6301;
+  height: 90px;
+  width: 1920px;
+}
+
+#copyright{
+    font-size: 15px ;
+    color: #FFF;
+    margin: 15px 0px 0px 15px;
+
+}
+
+#featured{
+  width: 300px;
+}  
 
 }
 
